TWC3167-2795:disable cell fixes,TWC3167-1645: css changes in peod selector, overlapping and autofillsettings (#1197)

--- a/Intel.MyDeals/Client/src/app/contract/ptModals/autofillsettings/autofillsettings.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/autofillsettings/autofillsettings.component.css
@@ -282,3 +282,13 @@
 .cdk-overlay-pane{
     height: auto !important;
 }
+
+#autoLoading .ss-loading-overlay .myLoader {
+    left: 40% !important;
+}
+
+#autoLoading .ss-loading-overlay {
+    opacity: 1;
+    top: 0px;
+    left: 0px;
+}
